<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrustveniPortal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings"></string>
    <string name="about"></string>
    <string name="item3"></string>
    <string name="home"></string>
    <string name="categories"></string>
    <string name="login"></string>
    <string name="catVijesti"></string>
    <string name="catNauka"></string>
    <string name="catVicevi"></string>

</resources>
